gta9p: Build with android 14 as platform version. Also, set sp level using init. This should set right properties needed for decryption.
Signed-off-by: Carlo Dee <carlodee.official@proton.me>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -31,7 +31,6 @@ on init
     export LD_LIBRARY_PATH /system/lib64:/system/lib64/hw:/vendor/lib64:/vendor/lib64/hw
     setprop prepdecrypt.setpatch true
     setprop prepdecrypt.loglevel 2
-    setprop ro.vendor.build.security_patch 2099-12-31
 
 on boot
     start health-hal-2-1
@@ -51,3 +50,6 @@ on post-fs
 
 on post-fs-data
     mkdir /data/vendor/keymaster 0775 root root
+
+on property:ro.build.version.security_patch=*
+    setprop ro.vendor.build.security_patch ${ro.build.version.security_patch}
