gta9p: Load vendor modules from init
* This is a fallback incase loading it from BoardConfig does not work.

Signed-off-by: Carlo Dee <carlodee.official@proton.me>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -34,6 +34,8 @@ on init
 
 on boot
     start health-hal-2-1
+    insmod /vendor/lib/modules/1.1/focaltech_tp.ko
+    insmod /vendor/lib/modules/1.1/icnl9951r.ko
 
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
