Revert "gta9p: Rework symlink to vendor/firmware"
This reverts commit 8b984542d9cad6a41df7c646e8adbc433354ebbc.

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -41,7 +41,7 @@ on fs
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     # Mount firmware
     mkdir /vendor/firmware_mnt
-    symlink /vendor/firmware_mnt /vendor/firmware
+    mount vfat /dev/block/bootdevice/by-name/apnhlos /vendor/firmware_mnt ro
 
 on post-fs
     mkdir /mnt/vendor/efs/DAK 0775 root root
